SOFE和OOM